[package]
name = "dof"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_dof"
crate-type = ["cdylib"]

[dependencies]
rattler_lock = "0.22.42"

[dependencies.pyo3]
version = "0.23.1"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
