[package]
name = "dof"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_dof"
crate-type = ["cdylib"]

[dependencies]
uv-cache = { git = "https://github.com/astral-sh/uv", tag = "0.5.29" }
uv-client = { git = "https://github.com/astral-sh/uv", tag = "0.5.29" }
uv-configuration = { git = "https://github.com/astral-sh/uv", tag = "0.5.29" }
uv-dispatch = { git = "https://github.com/astral-sh/uv", tag = "0.5.29" }
uv-distribution = { git = "https://github.com/astral-sh/uv", tag = "0.5.29" }
uv-distribution-types = { git = "https://github.com/astral-sh/uv", tag = "0.5.29" }
uv-install-wheel = { git = "https://github.com/astral-sh/uv", tag = "0.5.29" }
uv-installer = { git = "https://github.com/astral-sh/uv", tag = "0.5.29" }
uv-normalize = { git = "https://github.com/astral-sh/uv", tag = "0.5.29" }
uv-platform-tags = { git = "https://github.com/astral-sh/uv", tag = "0.5.29" }
uv-python = { git = "https://github.com/astral-sh/uv", tag = "0.5.29" }
uv-resolver = { git = "https://github.com/astral-sh/uv", tag = "0.5.29" }
uv-types = { git = "https://github.com/astral-sh/uv", tag = "0.5.29" }

rattler_lock = "0.22.42"
rattler_conda_types = { version = "0.30.2", default-features = false, features = [
  "rayon",
] }

dirs = "6.0.0"
fs-err = "3.1.0"
indicatif = "0.17.11"

[dependencies.pyo3]
version = "0.23.1"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
